It's an intermittent issue, found in 24 using linux x64 and the flag -XX:UseAVX=3.
logs:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (virtualSpaceNode.cpp:193), pid=322021, tid=322044
# fatal error: Failed to uncommit metaspace.
#
# JRE version: Java(TM) SE Runtime Environment (24.0.2+7) (build 24.0.2+7-46)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (24.0.2+7-46, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xfb9702] metaspace::VirtualSpaceNode::uncommit_range(MetaWordImpl**, unsigned long)+0x1d2
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S121122/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/69390702-af54-4042-8d05-630c67ca40e6/runs/3383d977-7954-4698-87c5-170b01df8ee5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese8H_java/scratch/0/core.322021)
#
# JFR recording file will be written. Location: /opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S121122/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/69390702-af54-4042-8d05-630c67ca40e6/runs/3383d977-7954-4698-87c5-170b01df8ee5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese8H_java/scratch/0/hs_err_pid322021.jfr
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S121122/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/69390702-af54-4042-8d05-630c67ca40e6/runs/3383d977-7954-4698-87c5-170b01df8ee5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese8H_java/scratch/0/hs_err_pid322021.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
logs:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (virtualSpaceNode.cpp:193), pid=322021, tid=322044
# fatal error: Failed to uncommit metaspace.
#
# JRE version: Java(TM) SE Runtime Environment (24.0.2+7) (build 24.0.2+7-46)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (24.0.2+7-46, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xfb9702] metaspace::VirtualSpaceNode::uncommit_range(MetaWordImpl**, unsigned long)+0x1d2
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S121122/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/69390702-af54-4042-8d05-630c67ca40e6/runs/3383d977-7954-4698-87c5-170b01df8ee5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese8H_java/scratch/0/core.322021)
#
# JFR recording file will be written. Location: /opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S121122/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/69390702-af54-4042-8d05-630c67ca40e6/runs/3383d977-7954-4698-87c5-170b01df8ee5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese8H_java/scratch/0/hs_err_pid322021.jfr
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S121122/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/69390702-af54-4042-8d05-630c67ca40e6/runs/3383d977-7954-4698-87c5-170b01df8ee5/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese8H_java/scratch/0/hs_err_pid322021.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
- relates to
-
JDK-8353564 Fail fatally if os::release_memory or os::uncommit_memory fails
-
- Resolved
-
- links to
-
Review(master)
openjdk/jdk/25720