8357662: applications/runthese/RunThese8H.java Crash: 'Failed to uncommit metaspace'