src/hotspot/share/memory/metaspace/virtualSpaceNode.cpp
@@ -190,7 +190,8 @@ void VirtualSpaceNode::uncommit_range(MetaWord* p, size_t word_size) {
   // Uncommit...
   if (os::uncommit_memory((char*)p, word_size * BytesPerWord) == false) {
     // Note: this can actually happen, since uncommit may increase the number of mappings.
-    fatal("Failed to uncommit metaspace.");
+    UL(warning, "Failed to uncommit metaspace.");
+    return;
   }
 
   UL2(debug, "... uncommitted %zu words.", committed_words_in_range);
